# faial

./: .appveyor-build.sh  .appveyor-install.sh  .appveyor.yml  .gitattributes  .gitignore  .gitlab-ci.yml  .merlin  Cargo.toml  LICENSE  Makefile  NEWS  README.md  _tags  c-ast.sh  check-drf  compareResUse.py  configure.sh  ctype.ml  download_github.py  download_github_std.py  dune  dune-project  faial  faial-bench  faial-bench-all  faial-gv  faial-print  faial-time-all.sh  faial-time.sh  faialtester.py  flores  proto-fixpoint.sh  run-bank-conflicts.sh  run-proto-to-cuda.sh  run-tests.py  time_test.sh
analyze_cost/: dune  maxima.ml  reals.ml  summation.ml
approx/lib/: check.ml  code.ml  dune
bank_conflicts/: README.md  absynth.ml  bankconflicts.ml  cofloco.ml  dune  dyn.ml  environ.ml  errors.ml  index_analysis.ml  koat.ml  maxima.ml  params.ml  pico.ml  poly.ml  ra.ml  shared_access.ml  symbolic.ml  vec3.ml  vectorized.ml  z3expr.ml
bank_conflicts/lib/: absynth.ml  access_context.ml  analysis_strategy.ml  bank.ml  cofloco.ml  config.ml  cost.ml  divergence.ml  divergence_analysis.ml  dune  index_analysis.ml  koat.ml  linearize_index.ml  maxima.ml  metric.ml  normalized_summation.ml  offset_analysis.ml  poly.ml  protocol_analysis.ml  ra.ml  ra_compiler.ml  reals.ml  set_range.ml  shared_access.ml  summation.ml  symbolic.ml  transaction.ml  uniform_range.ml  vectorized.ml  warp.ml
barrier_div/: barrier.ml  dune  main.ml
codegen/: cgen.ml  corvo.ml  dune  gen_kernels.ml  generator.ml  prep.ml  tgen.ml
compat/: faial-gv  faial-print  requirements.txt
contrib/VecAuto/: createVecAddDataset.py
cost/: dune  maxima.ml  reals.ml  summation.ml
docker/: Dockerfile  Dockerfile.try  Makefile  README.md  base.Dockerfile  ci.Dockerfile  dev.Dockerfile  docker-compose.yml  download-dist.sh  from-scratch.Dockerfile  user.Dockerfile
drf/: README.md  symbexp.ml
drf/lib/: aligned.ml  dune  flatacc.ml  gensmtlib2.ml  locsplit.ml  paired.ml  phasealign.ml  phasesplit.ml  projections.ml  symbexp.ml  sync.ml  task.ml  typecheck.ml  unsync.ml  wellformed.ml
examples/: arraySum.proto  bd2-2d.proto  bd2.proto  binopt.proto  binopt.vu  cond-1.proto  cond-ok-1.proto  cond-ok-2.proto  customIntegrator-applyPositionDeltas1.proto2  customIntegrator.proto  customIntegrator.proto2  diffusion2d.pu  fluidsGL_advectParticles_k.proto  fluidsGL_diffuseProject_k.proto  hello.proto  loop-1.ok  loop-2.proto  loop-3.proto  loop-4.proto  loop-5.proto  mask.proto  mask.vu  matrixMul-simple.proto  matrixMul.proto  ok.proto  ok.proto2  race1.proto  race1.proto2  race2.proto  race2.proto2  reduce1.proto  reduce1.vu  reduce2.vu  reduce3.vu  reduce4.vu  reduce5.vu  reduced_strength_blockwise.cu  saxpy.proto  saxpy.proto2  scp.proto  (+4 more)
examples/approx/: dune  example01.cu  example02.cu  example03.cu  example04.cu  example05.cu  example06.cu  example07.cu  example08.cu  example09.cu  example10.cu  test.ml
examples/bc/: 12tid.cu  14tid.cu  16tid.cu  18tid.cu  20tid.cu  24tid.cu  26tid.cu  2tid-plus-const.cu  2tid-racuda-1.cu  2tid-racuda-1.cu.params  2tid-racuda-2.cu  2tid-racuda-3.cu  2tid-seq-2.cu  2tid.cu  30tid.cu  32tid.cu  4tid.cu  6tid.cu  (+62 more)
faial-ui/: Cargo.toml  build.rs
faial-ui/src/: gv.rs  main.rs  parser.rs
imp/: alias.ml  arg.ml  array_use.ml  assert.ml  assert_proto.ml  assert_scoped.ml  atomic_write.ml  call.ml  decl.ml  dune  encode_asserts.ml  encode_assigns.ml  enum.ml  for.ml  infer_exp.ml  infer_stmt.ml  inliner.ml  kernel.ml  read.ml  scoped.ml  stmt.ml  write.ml
index_dep/: README.md  data_dep.ml  dune  indexflow.ml  main.ml  typing.ml
inference/: README.md  c_ast.ml  c_lang.ml  cast.ml  d_to_imp.ml  dlang.ml  dune  imp.ml  loops.ml
lib/: bankconflicts.ml  cast.ml  cgen.ml  common.ml  constfold.ml  ctype.ml  cu_to_json.ml  d_to_imp.ml  dlang.ml  dune  exp.ml  flatacc.ml  freenames.ml  gensmtlib2.ml  imp.ml  index.ml  indexflow.ml  interval.ml  location.ml  locsplit.ml  loops.ml  parse2.mly  parsejs.ml  phasealign.ml  phasesplit.ml  predicates.ml  proto.ml  serialize.ml  slice.ml  sourceloc.ml  streamutil.ml  subst.ml  symbexp.ml  tui.ml  typecheck.ml  variable.ml  wellformed.ml  z3_solver.ml  z3expr.ml
proto_to_cuda/: cgen.ml  dune  flores.ml  prototocuda.ml
protocols/: access.ml  architecture.ml  atomic.ml  atomics.ml  b_rel.ml  c_type.ml  code.ml  constfold.ml  dim3.ml  dune  enum.ml  exp.ml  freenames.ml  gen_z3.ml  gv_parser.ml  int_dom.ml  kernel.ml  mem_hierarchy.ml  memory.ml  n_binary.ml  n_rel.ml  n_unary.ml  params.ml  params.mli  predicates.ml  prob_exp.ml  proto.ml  range.ml  serialize.ml  subst.ml  variable.ml  visibility.ml
ra/: absynth.ml  cofloco.ml  dune  environ.ml  errors.ml  koat.ml  maxima.ml  stmt.ml  summation.ml
rust/: build.rs  lib.rs
scripts/: ci.sh  faial-drf
src/: S.ml  Test.ml  babycuda.ml  bankconflicts.ml  bindings.ml  c_to_imp.ml  cast.ml  cexp.ml  common.ml  constfold.ml  ctype.ml  d_to_imp.ml  dlang.ml  dune  exp.ml  flatacc.ml  freenames.ml  genfol.ml  gensmtlib2.ml  hash_rt.ml  imp.ml  indexflow.ml  lexer.mll  locsplit.ml  loops.ml  main.ml  main_old.ml  parse.ml  parse.mli  parse2.mly  parsejs.ml  phasealign.ml  phaseord.ml  phasesplit.ml  predicates.ml  program.ml  proto.ml  proto2phaseord.ml  rjson.ml  scan.mll  (+25 more)
stage0/: README.md  common.ml  dune  errors.ml  files.ml  indent.ml  interval.ml  location.ml  logger.ml  ojson.ml  py.ml  rjson.ml  slice.ml  stack_trace.ml  state.ml  streamutil.ml  subprocess.ml  tui.ml
stage1/: README.md  bindings.ml  dune  exp.ml  freenames.ml  predicates.ml  proto.ml  serialize.ml  subst.ml  variable.ml
test/: dune  index-dep.t  test_common.ml  test_ctype.ml  test_dlang.ml  test_gv_parser.ml  test_imp.ml  test_index_analysis.ml  test_locsplit.ml  test_loop.ml  test_maxima.ml  test_parsejs.ml  test_poly.ml  test_predicates.ml  test_prob_exp.ml  test_projections.ml  test_py.ml  test_queries.ml  test_range.ml  test_slice.ml  test_streamutil.ml  test_wgsl.ml
total_cost/: diff.ml  dune  dyn.ml  main.ml
tutorial/: README.md  saxpy-buggy.proto  saxpy.proto
(+148 files in other folders)
