(library
  (name bc)
  (modules vectorized poly)
  (libraries stage0 protocols))

(executable
 (public_name pico)
 (name pico)
 (modules pico bankconflicts z3expr)
 (libraries inference cmdliner z3 bc printbox printbox-text))

(executable
 (public_name faial-bc-dyn)
 (name dyn)
 (modules dyn)
 (libraries inference cmdliner z3 bc))
