(library
  (name bank_conflicts)
  (modules
    vec3 vectorized poly shared_access index_analysis ra
    absynth
    symbolic)
  (libraries
    ; 3rd-pary
    z3 str
    ; 1st-pary
    stage0 protocols inference))

(executable
 (public_name faial-bc)
 (name pico)
 (modules pico)
 (libraries cmdliner z3 bank_conflicts printbox printbox-text))

(executable
 (public_name faial-bc-dyn)
 (name dyn)
 (modules dyn)
 (libraries inference cmdliner z3 bank_conflicts))
