(library
 (name cgen)
 (modules cgen tgen prep)
 (wrapped false)
 (libraries inference stage0 protocols otoml bank_conflicts))

(executable
 (public_name faial-gen)
 (name corvo)
 (modules corvo)
 (libraries cgen cmdliner))

(executable
 (public_name gen_kernels)
 (name gen_kernels)
 (modules gen_kernels)
 (libraries cgen))
