[package]

name = "faial"
version = "1.0.0"
authors = ["Tiago Cogumbreiro <cogumbreiro@users.sf.net>"]
edition = "2018"

[build-dependencies]
vergen = "3"

[profile.release]

lto = true

[dependencies]

ansi_term = "0.12.1"
sexp = "1.1.4"
duct = "0.13.4"
prettytable-rs = "0.8.0"
clap = "2.33.3"
shlex = "0.1.1"