
; We need to explicitly declare the dependencies of parse2
; Otherwise dune thinks there's a circular dependency
(library
  (name kernel)
  (modules
    common
    index
    interval
    location
    variable
    exp
    proto
    smtlib
    serialize
    subst
    constfold
    predicates
    bindings
    slice
  )
  (wrapped false)
  (libraries yojson)
)

(menhir (modules parse2))
(ocamllex scan)

(library
  (name faial)
  (wrapped false)
  (modules
    tui
    cast
    ctype
    dlang
    d_to_imp
    flatacc
    freenames
    gensmtlib2
    imp
    indexflow
    locsplit
    loops
    ojson
    parse2
    phasealign
    phasesplit
    rjson
    scan
    streamutil
    symbexp
    typecheck
    wellformed
    cu_to_json
  )

  (libraries yojson ANSITerminal (re_export kernel)))

(library
  (name lib_solve)
  (wrapped false)
  (modules
    z3_solver
  )

  (libraries pico z3))


(library
  (name pico)
  (wrapped false)
  (modules
    bankconflicts
    z3expr
  )

  (libraries faial z3))
