(library
 (name cgen)
 (modules cgen)
 (wrapped false)
 (libraries inference stage0 protocols otoml))

(executable
 (public_name proto-to-cuda)
 (name prototocuda)
 (modules prototocuda)
 (libraries cgen cmdliner))

(executable
 (public_name gen_kernels)
 (name gen_kernels)
 (modules gen_kernels)
 (libraries cgen))
