
(tests
 (names
   test_common
   test_imp
   test_locsplit
   test_range
   test_streamutil
   test_ctype
   test_slice
   test_queries
   test_poly
   test_index_analysis
   test_gv_parser
   test_projections
 )
 (libraries stage0 protocols drf inference oUnit bank_conflicts)
)

(cram
  (deps ../index_dep/main.exe ../drf/bin/main.exe
  )
)
