(tests
 (names
   test_common
   test_imp
   test_locsplit
   test_range
   test_streamutil
   test_ctype
   test_slice
   test_queries
   test_poly
   test_index_analysis
   test_gv_parser
   test_dlang
   test_loop
   test_prob_exp
   test_maxima
 )
 (libraries stage0 ra protocols drf inference oUnit bank_conflicts analyze_cost)
)

(cram
  (deps ../index_dep/main.exe ../drf/bin/main.exe
  )
)
